src/test/resources/entity_test/invalid/Employee4.entity
// qlkdj lqjdlqsk dqslk l jd
Employee4 {
  id : integer { @Id  @DbSize(-10,2)  } ;
  name : string ;
}
